--- a/estilo.css
+++ b/estilo.css
@@ -1,27 +1,89 @@
-header {
-background-color: lightgray;
-width: 500px;
-margin: 0 auto
-text-align: center;
-border: 10px solid darkblue;
-padding: 15px; 
+{
+
+    margin:0;
+
+    box-sizing: border-box;
 
 }
 
-footer{
-    background-color: crimson;
-}
+ header{
 
-div{
-    background-color: lightblue;
-    margin: 20px;
-    border: 10px solid violet;
-    padding: 10px;
-}
-body,h1,p{
-    margin: 0;
-    /* margin-left: 50px; 
-    margin-right:50px; 
-    margin-top: 20px; 
-    margin-bottom: 20px; */
-}
+        text-align: center;
+
+
+
+       background-image: url(fundo-cabecalho.png);
+
+       background-color: black;
+
+       background-repeat: no-repeat;
+
+       background-size: cover;
+
+       padding: 27px;
+
+ }
+
+       h1{
+
+        text-align: center;
+
+        font-size: 20px;
+
+        font-family: Arial;
+        font-weight: 600;
+        margin-top: 7px;
+        margin-bottom: 11px;
+        
+
+       }
+       label {
+       font-family: arial; 
+       font-size: 16px; 
+       font-weight: bold; 
+       display: block;
+       }
+       input{
+        display:block;
+        widht:100%; 
+        height: 38px;
+        background-color: #c4c4c4;
+        border: none;
+        border-radius: 0;
+        color: #202020;
+        front-size: 16px;
+        margin-bottom: 12px;
+    
+
+       }
+       textarea{
+        height: 94px;
+       }
+       button{
+        font-size:18px; 
+        font-weight: bold;
+        padding-top: 15px;
+        width: 217px;
+        background-color: #999999;
+        border:0; 
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+
+
+       }
+       footer{
+        margin-top: 50px;
+        text-align: center;
+        background-color: black;
+        color:whitesmoke;
+        font-size: 14px;
+        padding: 10px;
+        font-family:Verdana, Geneva, Tahoma, sans-serif ;
+       }
+       div{
+        margin-left: 17px;
+        margin-right: 17px;
+       }
+    
+
